--- a/catalog.html
+++ b/catalog.html
@@ -137,16 +137,16 @@
                     alt="Шарик мороженого бабл-гам.">
                   <div class="basket-order-wrapper">
                     <p class="basket-description">Бабл-гам</p>
-                    <span class="basket-quantity">1,5 кг х 320 ₽</span>
+                    <span class="basket-quantity">1,5 кг х 480 ₽</span>
                   </div>
-                  <span class="basket-price">320 ₽</span>
+                  <span class="basket-price">480 ₽</span>
                 </a>
                 <button class="basket-close-button" type="button">
                   <span class="visually-hidden">Удалить товар из корзины.</span>
                 </button>
             </ul>
             <div class="basket-wrapper-total ">
-              <button class="button-secondary ">Оформить заказ</button>
+              <button class="basket-order-button button-secondary ">Оформить заказ</button>
               <span class="basket-price-total">Итого: 790 ₽</span>
             </div>
           </div>
@@ -636,7 +636,7 @@
         <div class="pagination-wrapper">
           <a class="pagination-button button-primary" href="#">Показать еще</a>
           <div class="pagination-container">
-            <button class="pagination-arrow arrow-backward"></button>
+            <span class="pagination-arrow arrow-backward"></span>
             <ul class="pagination-list">
               <li class="pagination-item">
                 <a class="pagination-link" href="#">1</a>
@@ -645,7 +645,7 @@
                 <a class="pagination-link" href="#">2</a>
               </li>
               <li class="pagination-item pagination-item-divider">
-                <span class="pagination-link ">3</span>
+                <span class="pagination-link " aria-current="page">3</span>
               </li>
               <li class="pagination-item">
                 <a class="pagination-link" href="#">4</a>
@@ -654,7 +654,7 @@
                 <a class="pagination-link" href="#">5</a>
               </li>
             </ul>
-            <button class="pagination-arrow  arrow-forward"></button>
+            <a class="pagination-arrow  arrow-forward" href="#"></a>
           </div>
         </div>
       </section>
@@ -703,10 +703,14 @@
       </ul>
       <!-- Инфо -->
       <div class="info-wrapper">
-        <h2 class="info-title">Для поставщиков</h2>
-        <a class="info-link" href="#">Наши документы</a>
-        <a class="info-link" href="#">О производстве</a>
-        <a class="info-link" href="#">Экологические стандарты</a>
+        <div class="info-column-one">
+          <h2 class="info-title">Для поставщиков</h2>
+          <a class="info-link" href="#">О производстве</a>
+        </div>
+        <div class="info-column-two">
+          <a class="info-link" href="#">Наши документы</a>
+          <a class="info-link" href="#">Экологические стандарты</a>
+        </div>
       </div>
       <!-- Логотип академии -->
       <div class="footer-logo-wrapper">
